in progress Binance

--- a/.env.example
+++ b/.env.example
@@ -20,25 +20,25 @@ OKEX_API_SECRET=
 OKEX_API_PASSPHRASE=
 
 #Huobi
-BITFINEX_ACTIVE=false
-BITFINEX_PRIVATE_API_BASE=
-BITFINEX_PUBLIC_API_BASE=
-BITFINEX_API_KEY=
-BITFINEX_API_SECRET=
+HUOBI_ACTIVE=false
+HUOBI_PRIVATE_API_BASE=https://api.huobi.pro
+HUOBI_PUBLIC_API_BASE=https://api.huobi.pro
+HUOBI_API_KEY=
+HUOBI_API_SECRET=
 
 
 #Mercado Bitcoin
-BITFINEX_ACTIVE=false
-BITFINEX_PRIVATE_API_BASE=
-BITFINEX_PUBLIC_API_BASE=
-BITFINEX_API_KEY=
-BITFINEX_API_SECRET=
+MERCADO_BITCOIN_ACTIVE=false
+MERCADO_BITCOIN_PRIVATE_API_BASE=https://www.mercadobitcoin.net/api
+MERCADO_BITCOIN_PUBLIC_API_BASE=https://www.mercadobitcoin.net/api
+MERCADO_BITCOIN_API_KEY=
+MERCADO_BITCOIN_API_SECRET=
 
 #Bitcointrade
-BITFINEX_ACTIVE=false
-BITFINEX_PRIVATE_API_BASE=
-BITFINEX_PUBLIC_API_BASE=
-BITFINEX_API_KEY=
-BITFINEX_API_SECRET=
+BITCOINTRADE_ACTIVE=false
+BITCOINTRADE_PRIVATE_API_BASE=https://api.bitcointrade.com.br
+BITCOINTRADE_PUBLIC_API_BASE=https://api.bitcointrade.com.br
+BITCOINTRADE_API_KEY=
+BITCOINTRADE_API_SECRET=
 
 
